# containers

./: LICENSE  LICENSE.md  README.md
.github/workflows/: build-and-push.yml
containers/base/: Dockerfile  requirements.txt
containers/cabotage-ca-admission/: Dockerfile  admission.py  requirements.txt
containers/certificate-approver/: Dockerfile  approver.py  build.sh  requirements.txt
containers/certificate-requestor/: Dockerfile  requestor.py  requirements.txt
containers/enrollment-controller/: Dockerfile  controller.py  requirements.txt
containers/enrollment-operator/: .dockerignore  Dockerfile  operator.py  requirements.txt
containers/enrollment-operator/crds/: crd.yml
containers/enrollment-operator/examples/: deployment.yml  example.yml  rbac.yaml
containers/registry/: Dockerfile  custom-entrypoint.sh
containers/sidecar/: Dockerfile  requirements.txt  sidecar.py
containers/sidecar-rs/: Cargo.toml  Dockerfile
containers/sidecar-rs/src/: main.rs
containers/tailscale-operator-manager/: Dockerfile  operator.py  requirements.txt
containers/tailscale-operator-manager/crds/: crd.yml
containers/tailscale-operator-manager/examples/: deployment.yml  rbac.yaml
