[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
filetime = "0.2"
hex = "0.4"
pem = "3"
rand = "0.10"
reqwest = { version = "0.13", features = ["json", "rustls", "blocking"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
x509-parser = "0.18"

[profile.release]
strip = true
lto = true
